texts and table align

--- a/Page_a.html
+++ b/Page_a.html
@@ -36,12 +36,12 @@
 				<h2>Chronologie sélective</h2>
 
 				<table >
-					<tr class="title">
+					<tr>
 						<th>Année</th>
 						<th>Evènement</th>
 					</tr>
 					<tr>
-						<td><b>1952</b></td>
+						<td><a href="#"><b>1952</b></a></td>
 						<td><a href="#">Semi-Automatic Ground Environment​ : Système d'armes mettant en réseau 40
 	ordinateurs à autant de radars.</a></td>
 					</tr>
@@ -153,13 +153,9 @@
 				<figure><img src ="server.jpg" alt="Le premier serveur" title="image du premier serveur web" height="800" width="1100"/><figcaption>Fig.1-Le premier serveur web,actuellient au musée du CERN, etiqueté « <em>This machine is a
 				server.</em> DO NOT <br/>POWER IT DOWN!! ​» ​ </figcaption></figure>
 
+				<h2>Protocole TCP/IP</h2>
 
-			</div>
-
-
-			<h2>Protocole TCP/IP</h2>
-
-			<p>L'abondante diversité des méthodes de communications réseau amena un besoin
+			<p class="para">L'abondante diversité des méthodes de communications réseau amena un besoin
 			d'uniformisation. Robert E. Kahn recruta Vinton G. Cerf de l'université Stanford 
 			dans le but de travailler ensible sur ce problème. En 1973, ils avaient déjà réalisé 
 			une reformulation profonde, dans laquelle les différences entre les protocoles s'estompaient 
@@ -177,6 +173,12 @@
 			juillet 1977. Cette nouvelle méthode se répandit au travers des réseaux, et le 1​<sup>er​</sup>
 			janvier 1983 les protocoles TCP/IP devenaient officiellement le seul protocole sur l'ARPANET, 
 			remplaçant le précédent protocole NCP2.</p>
+
+
+			</div>
+
+
+			
 			</div>
 
 
