--- a/Page_b.html
+++ b/Page_b.html
@@ -8,6 +8,9 @@
 	
 	</head>
 		<body>
+
+			<div class="textab">
+
 			<h1>World Wide Web</h1> 
 			
 			<p class="para1">Le <strong>World Wide Web</strong> (litt. la « toile (d’araignée) mondiale », 
@@ -127,5 +130,7 @@ anonymous FTP&lt;/A&gt; , etc.&lt;/A&gt;
 &lt;/BODY&gt;</code></pre>
 
 	</div> <br/>
+
+</div>
 		</body>
 </html>
